--- a/index.html
+++ b/index.html
@@ -1,260 +1,282 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Space Runner</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Moon Ninja</title>
   <style>
-    html, body {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+    body {
       overflow: hidden;
-      background: radial-gradient(ellipse at center, #000010, #000);
+      background: radial-gradient(ellipse at bottom, #0d1b2a, #000);
       font-family: Arial, sans-serif;
     }
-
     canvas {
       display: block;
     }
-
     #score {
       position: absolute;
       top: 10px;
-      right: 20px;
+      right: 10px;
       color: white;
       font-size: 24px;
       font-family: monospace;
-      z-index: 2;
+      text-shadow: 0 0 5px #fff;
     }
-
-    #credit {
+    #summer {
       position: absolute;
       top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: white;
-      font-size: 16px;
+      left: 10px;
+      font-size: 20px;
       font-family: monospace;
-      opacity: 0.6;
-      z-index: 2;
+      color: #fff;
+      text-shadow: 0 0 10px #ff0, 0 0 20px #ff0;
+      animation: glow 1.5s infinite alternate;
+    }
+    #creator {
+      position: absolute;
+      top: 40px;
+      left: 10px;
+      font-size: 14px;
+      color: #aaa;
     }
 
-    #message {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      font-size: 32px;
-      font-family: monospace;
-      text-align: center;
-      display: none;
-      z-index: 2;
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 5px #ff0;
+      }
+      to {
+        text-shadow: 0 0 15px #ff0, 0 0 30px #ff0;
+      }
     }
   </style>
 </head>
 <body>
-  <canvas id="game"></canvas>
+  <canvas id="gameCanvas"></canvas>
+  <div id="summer">🌞 Happy Summer!</div>
+  <div id="creator">Created by Daniyal</div>
   <div id="score">0</div>
-  <div id="credit">Created by Daniyal</div>
-  <div id="message">Game Over<br>Tap to Restart</div>
 
   <script>
-    const canvas = document.getElementById('game');
-    const ctx = canvas.getContext('2d');
-    canvas.width = innerWidth;
-    canvas.height = innerHeight;
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-    let ninja = {
+    let score = 0;
+    let speed = 6;
+    let obstacleGap = 400;
+
+    const stars = [];
+    for (let i = 0; i < 100; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        size: Math.random() * 2,
+        opacity: Math.random(),
+        flicker: Math.random() * 0.05
+      });
+    }
+
+    const ninja = {
       x: 100,
-      y: canvas.height - 150,
-      size: 50,
-      vy: 0,
-      gravity: 1.2,
-      jumpPower: -25, // increased jump power
+      y: canvas.height - 100,
+      size: 30,
+      velocityY: 0,
       isJumping: false,
       rotation: 0
     };
 
+    const gravity = 0.6;
+    const jumpPower = 15;
     let obstacles = [];
-    let stars = [];
-    let score = 0;
-    let speed = 5;
-    let gameOver = false;
-    let message = document.getElementById('message');
 
-    function createStars() {
-      for (let i = 0; i < 100; i++) {
-        stars.push({
-          x: Math.random() * canvas.width,
-          y: Math.random() * canvas.height,
-          r: Math.random() * 2,
-          alpha: Math.random()
-        });
-      }
+    function createObstacle() {
+      const shapes = ["circle", "square", "triangle"];
+      const shape = shapes[Math.floor(Math.random() * shapes.length)];
+      obstacles.push({
+        x: canvas.width + Math.random() * 200,
+        y: canvas.height - 60,
+        size: 40 + Math.random() * 20,
+        rolling: score >= 500,
+        shape,
+        angle: 0
+      });
     }
 
     function drawStars() {
       stars.forEach(star => {
+        star.opacity += star.flicker;
+        if (star.opacity <= 0 || star.opacity >= 1) star.flicker *= -1;
         ctx.beginPath();
-        ctx.arc(star.x, star.y, star.r, 0, Math.PI * 2);
-        ctx.fillStyle = `rgba(255, 255, 255, ${star.alpha})`;
+        ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(255,255,255,${star.opacity})`;
         ctx.fill();
-        star.alpha += (Math.random() - 0.5) * 0.05;
-        star.alpha = Math.max(0.1, Math.min(1, star.alpha));
       });
     }
 
     function drawNinja() {
       ctx.save();
-      ctx.translate(ninja.x + ninja.size / 2, ninja.y + ninja.size / 2);
+      ctx.translate(ninja.x, ninja.y);
       ctx.rotate(ninja.rotation);
-      ctx.fillStyle = 'white';
+      ctx.strokeStyle = "#fff";
+      ctx.lineWidth = 4;
+      ctx.shadowBlur = 10;
+      ctx.shadowColor = "#fff";
+
+      // Head
       ctx.beginPath();
-      ctx.arc(0, 0, ninja.size / 2, 0, Math.PI * 2);
-      ctx.fill();
+      ctx.arc(0, -20, 6, 0, Math.PI * 2);
+      ctx.stroke();
+
+      // Body
+      ctx.beginPath();
+      ctx.moveTo(0, -14);
+      ctx.lineTo(0, 10);
+      ctx.stroke();
+
+      // Arms
+      ctx.beginPath();
+      ctx.moveTo(-10, -5);
+      ctx.lineTo(10, -5);
+      ctx.stroke();
+
+      // Legs
+      ctx.beginPath();
+      ctx.moveTo(0, 10);
+      ctx.lineTo(-10, 25);
+      ctx.moveTo(0, 10);
+      ctx.lineTo(10, 25);
+      ctx.stroke();
+
       ctx.restore();
     }
 
-    function drawObstacles() {
-      obstacles.forEach(obs => {
-        ctx.save();
-        ctx.translate(obs.x + obs.size / 2, obs.y + obs.size / 2);
-        if (obs.roll) ctx.rotate(obs.angle);
-        ctx.fillStyle = 'yellow';
-        ctx.beginPath();
-        ctx.arc(0, 0, obs.size / 2, 0, Math.PI * 2);
-        ctx.fill();
-        ctx.restore();
-      });
+    function drawObstacle(obstacle) {
+      ctx.save();
+      ctx.translate(obstacle.x, obstacle.y);
+      if (obstacle.rolling) {
+        obstacle.angle += 0.1;
+        ctx.rotate(obstacle.angle);
+      }
+
+      ctx.fillStyle = "yellow";
+      ctx.shadowBlur = 10;
+      ctx.shadowColor = "yellow";
+
+      switch (obstacle.shape) {
+        case "circle":
+          ctx.beginPath();
+          ctx.arc(0, 0, obstacle.size / 2, 0, Math.PI * 2);
+          ctx.fill();
+          break;
+        case "square":
+          ctx.fillRect(-obstacle.size / 2, -obstacle.size / 2, obstacle.size, obstacle.size);
+          break;
+        case "triangle":
+          ctx.beginPath();
+          ctx.moveTo(0, -obstacle.size / 2);
+          ctx.lineTo(obstacle.size / 2, obstacle.size / 2);
+          ctx.lineTo(-obstacle.size / 2, obstacle.size / 2);
+          ctx.closePath();
+          ctx.fill();
+          break;
+      }
+
+      ctx.restore();
     }
 
-    function update() {
-      if (gameOver) return;
+    function detectCollision(obstacle) {
+      const dx = obstacle.x - ninja.x;
+      const dy = obstacle.y - ninja.y;
+      const distance = Math.sqrt(dx * dx + dy * dy);
+      return distance < (obstacle.size / 2 + ninja.size / 2);
+    }
 
+    function updateGame() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawStars();
 
-      // Ninja movement
-      ninja.vy += ninja.gravity;
-      ninja.y += ninja.vy;
-      if (ninja.y > canvas.height - 150) {
-        ninja.y = canvas.height - 150;
-        ninja.vy = 0;
+      // Update ninja
+      ninja.y += ninja.velocityY;
+      ninja.velocityY += gravity;
+      if (ninja.y > canvas.height - 100) {
+        ninja.y = canvas.height - 100;
+        ninja.velocityY = 0;
         ninja.isJumping = false;
         ninja.rotation = 0;
       }
-      if (ninja.isJumping) ninja.rotation += 0.2;
 
+      // Draw and update obstacles
+      for (let i = 0; i < obstacles.length; i++) {
+        const ob = obstacles[i];
+        ob.x -= speed;
+        drawObstacle(ob);
+        if (detectCollision(ob)) {
+          alert("Game Over!");
+          document.location.reload();
+          return;
+        }
+      }
+
+      // Remove off-screen obstacles
+      obstacles = obstacles.filter(ob => ob.x + ob.size > 0);
+
+      // Add new obstacles
+      if (obstacles.length === 0 || canvas.width - obstacles[obstacles.length - 1].x > obstacleGap + Math.random() * 200) {
+        createObstacle();
+      }
+
+      // Draw ninja
       drawNinja();
 
-      // Obstacles
-      obstacles.forEach(obs => {
-        obs.x -= speed;
-        if (obs.roll) obs.angle += 0.1;
-      });
-
-      obstacles = obstacles.filter(obs => obs.x + obs.size > 0);
-
-      if (score % Math.floor(60 + Math.random() * 50) === 0) {
-        let size = 40 + Math.random() * 30;
-        let roll = score > 500;
-        obstacles.push({
-          x: canvas.width + size,
-          y: canvas.height - 150,
-          size,
-          roll,
-          angle: 0
-        });
+      // UFO appearance (optional feature you had)
+      if (score > 0 && score % 1000 === 0) {
+        ctx.fillStyle = "#0ff";
+        ctx.fillRect(canvas.width / 2 - 20, 100, 40, 20); // UFO
+        ctx.beginPath();
+        ctx.moveTo(canvas.width / 2, 120);
+        ctx.lineTo(canvas.width / 2, canvas.height - 100);
+        ctx.strokeStyle = "red";
+        ctx.lineWidth = 2;
+        ctx.stroke();
       }
 
-      drawObstacles();
-
-      // Collision
-      obstacles.forEach(obs => {
-        let dx = (ninja.x + ninja.size / 2) - (obs.x + obs.size / 2);
-        let dy = (ninja.y + ninja.size / 2) - (obs.y + obs.size / 2);
-        let distance = Math.sqrt(dx * dx + dy * dy);
-        if (distance < ninja.size / 2 + obs.size / 2) {
-          gameOver = true;
-          message.style.display = 'block';
-        }
-      });
-
-      // UFO event
-      if (score % 1000 === 0 && score !== 0 && !document.getElementById('ufo')) {
-        let ufo = document.createElement('div');
-        ufo.id = 'ufo';
-        ufo.style.position = 'absolute';
-        ufo.style.top = '100px';
-        ufo.style.left = '50%';
-        ufo.style.width = '80px';
-        ufo.style.height = '30px';
-        ufo.style.background = 'silver';
-        ufo.style.borderRadius = '50%';
-        ufo.style.boxShadow = '0 0 10px cyan';
-        document.body.appendChild(ufo);
-
-        setTimeout(() => {
-          let beam = document.createElement('div');
-          beam.style.position = 'absolute';
-          beam.style.top = '130px';
-          beam.style.left = 'calc(50% + 35px)';
-          beam.style.width = '10px';
-          beam.style.height = '80px';
-          beam.style.background = 'lime';
-          beam.style.boxShadow = '0 0 10px lime';
-          document.body.appendChild(beam);
-
-          setTimeout(() => {
-            beam.remove();
-            ufo.remove();
-          }, 1000);
-        }, 1000);
-      }
-
+      // Increase score and difficulty
       score++;
-      document.getElementById('score').innerText = score;
+      if (score % 500 === 0) {
+        speed += 0.15;
+      }
 
-      // Speed increase every 500 points
-      if (score % 500 === 0) speed += 0.15;
+      document.getElementById("score").textContent = score;
 
-      requestAnimationFrame(update);
+      if (ninja.isJumping) {
+        ninja.rotation += 0.2;
+      }
+
+      requestAnimationFrame(updateGame);
     }
 
-    window.addEventListener('keydown', () => {
-      if (!ninja.isJumping && !gameOver) {
-        ninja.vy = ninja.jumpPower;
+    document.addEventListener("keydown", () => {
+      if (!ninja.isJumping) {
+        ninja.velocityY = -jumpPower;
         ninja.isJumping = true;
-      } else if (gameOver) {
-        restart();
       }
     });
 
-    window.addEventListener('touchstart', () => {
-      if (!ninja.isJumping && !gameOver) {
-        ninja.vy = ninja.jumpPower;
+    document.addEventListener("click", () => {
+      if (!ninja.isJumping) {
+        ninja.velocityY = -jumpPower;
         ninja.isJumping = true;
-      } else if (gameOver) {
-        restart();
       }
     });
 
-    function restart() {
-      obstacles = [];
-      score = 0;
-      speed = 5;
-      ninja.y = canvas.height - 150;
-      ninja.vy = 0;
-      ninja.rotation = 0;
-      ninja.isJumping = false;
-      gameOver = false;
-      message.style.display = 'none';
-      update();
-    }
-
-    createStars();
-    update();
+    updateGame();
   </script>
 </body>
 </html>
+
